src/components/global/Header/Header.module.scss
@import "../../../styles/mixins";
@import "../../../styles/vars";

.header {
  position: relative;   
  margin-bottom: 100px;

  @include mdScreenMedia {
    background-position: bottom right;
    margin-bottom: 50px;
    padding-top: 60px;
  }

  &__wrapper {   
    padding-top: 70px;    

    @include bgWebp(
      "../assets/images/header/headerBg.png",
      "../assets/images/header/headerBg.webp"
    );
    background-repeat: no-repeat;
    background-position: top right;
    background-size: contain;
    margin-bottom: 100px;

    @include mdScreenMedia {
     text-align: center;
    }
  }

  &__headerBg {
    width: 70%;
    height: 100%;
    position: absolute;
    top: 50px;
    right: 0;
    z-index: -2;    
  }

  &__logoImg {
    max-width: 100%;

    @include mdScreenMedia {
      max-width: 70%;
    }
  }

  &__container {
    @include flexCol(space-between);
    gap: 80px;

    @include mdScreenMedia {
      flex-wrap: wrap;
      gap: 40px;
      justify-content: center;
      text-align: center;
    }
  }

  &__title {
    @include setFont(88px, 300);
    line-height: 88px;

    @include mdScreenMedia {     
      @include setFont(64px, 300);
      line-height: 65px;
    }
  }

  &__titleGreen {
    @include setFont(90px, 700,  $color-green);
    
    @include mdScreenMedia {     
      @include setFont(64px, 300,  $color-green);
      line-height: 65px;
    }    
  }

  &__suiBlock {    
    display: flex;
    gap: 15px;
    margin: 50px 0 5px;

    @include mdScreenMedia {
      justify-content: center;
    }
  }

  &__suiPosition {
    @include flexCol(center, end);
    flex-direction: column;
    margin-left: 12px;

    a {
      display: inherit;
    }
  }

  &__suiImg {
    max-width: 150px;  
    
    @include setFont(18px, 400);
    max-width: 110px;  
  }

  &__suiTitle {
    @include setFont(15px, 300);
    line-height: 5px;
  }

  &__text {
    max-width: 600px;
    @include setFont(22px, 300);
    line-height: 32px;
    margin-top: 40px;
    margin-bottom: 55px;

    @include mdScreenMedia {
      //max-width:  350px;
      @include setFont(18px, 400);
      line-height: 22px;
      margin-top: 20px;
      margin-bottom: 35px;  
    }
  }

  &__btnPosition {
    display: flex;
    justify-content: space-between;
    gap: 50px;

    @include mdScreenMedia {
     justify-content: center;
     gap: 10px;
    }
  }

  &__btn {
    width: 100%;
    max-width: 285px;
    height: 65px;
    background-color: $color-green;
    color: $color-white;
    @include setFont(28px, 500);
    border-radius: 15px;
    box-shadow: 0px 6px 20px 0px $color-green;

    &:hover {
      background-color: #128a66;
      cursor: pointer;
    }

    @include mdScreenMedia {
      max-width: 153px;
      height: 43px;
      @include setFont(20px, 600);
      line-height: 30px;
      border-radius: 5px;
      margin-right: 20px;
    }
  }

  &__docPosition {
    @include flexCol();
  }

  &__docIcon {
    @include svg(28px, $color-white);
    margin-right: 7px;
  }

  &__docText {
    @include flexCol();
    @include setFont(22px, 300);
    text-decoration: underline;

    &:hover {
      text-decoration: none;
      cursor: pointer;
    }

    @include mdScreenMedia {
      @include setFont(17px, 300);
    }
  }

  &__socIconsPosition {
    display: flex;
    width: 100%;;
    gap: 25px;
    margin-top: 45px;

    @include mdScreenMedia {
      justify-content: center;
    }

    a {
      color: $color-white;
      &:hover {
        color: $color-green;
      }
    }
  }
  &__socIcon {
    @include svg(40px, $color-white);
  }

  &__aiAgent {
    width: 30%;

    @include mdScreenMedia {
      width: 40%;
    }

    &_img {
      width: 100%;
    }
  }
}

